2007-11-21  Brian Warner  <warner@lothar.com>

	* buildbot/changes/p4poller.py (P4Source._finished): don't let a
	failure cause us to stop polling. Thanks to John Backstrand for
	the patch. Closes #135.

	* buildbot/status/web/waterfall.py (WaterfallStatusResource.body):
	fix timezone calculation, we were always emitting DST, even in
	winter. Thanks to Charles Lepple and John Saxton for the patch.
	Closes #137.
	* buildbot/test/test_web.py (Waterfall.test_waterfall._check1): same


	* lots: a whole batch of patches from Benoit Sigoure, referenced
	in ticket #138. Thanks!

	* buildbot/master.py (BuildMaster.loadConfig): builder names that
	begin with an underscore are now reserved, so prohibit them from
	appearing in the config file.
	* NEWS: announce this change.

	* buildbot/status/web/base.py: add buttons (to one_line_per_build
	and one_box_per_builder) to force/stop builds on all Builders at
	once.
	* buildbot/status/web/baseweb.py: same
	(OneBoxPerBuilder.body): add links to the per-Builder page

	* buildbot/status/web/builder.py: same

	* buildbot/status/web/builder.py (StatusResourceBuilder.body):
	factor out force/stop form generation
	* buildbot/status/web/base.py: same
	* buildbot/status/web/build.py: same

	* buildbot/status/web/builder.py (StatusResourceBuilder.force):
	simplify some 'if' statements
	(StatusResourceBuilder.build_line): add a 'Stop Build' button next
	to the 'Force Build' button, so you can start and stop a build
	from the same place.
	(StatusResourceBuilder.force): redirect back to the waterfall,
	rather than the index page
	(StatusResourceBuilder.ping): same
	* buildbot/status/web/build.py (StatusResourceBuild.stop): same

	* buildbot/slave/bot.py (Bot.remote_setBuilderList): don't
	consider the 'info' directory as a leftover directory. Patch from
	Benoit Sigoure, ticket #138.
	(others): remove trailing whitespace

2007-11-01  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/builder.py (StatusResourceBuilder.build_line):