@@ -3,6 +3,9 @@
 	* buildbot/changes/p4poller.py (P4Source._finished): don't let a
 	failure cause us to stop polling. Thanks to John Backstrand for
 	the patch. Closes #135.
+	* buildbot/test/test_p4poller.py (TestP4Poller.testFailedChanges):
+	change this to match
+	(TestP4Poller.testFailedDescribe): same
 
 	* buildbot/status/web/waterfall.py (WaterfallStatusResource.body):
 	fix timezone calculation, we were always emitting DST, even in
